--- a/SNRTweaks/SNRTweaks.csproj
+++ b/SNRTweaks/SNRTweaks.csproj
@@ -51,4 +51,8 @@
       <HintPath>D:\SteamLibrary\steamapps\common\Subnautica\Subnautica_Data\Managed\UnityEngine.CoreModule.dll</HintPath>
     </Reference>
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Items\Equipment\" />
+  </ItemGroup>
 </Project>
