--- a/SNRTweaks/SNRTweaks.csproj
+++ b/SNRTweaks/SNRTweaks.csproj
@@ -1,5 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+  
   <PropertyGroup>
     <TargetFramework>net472</TargetFramework>
 	<AssemblyName>SNRTweaks</AssemblyName>
@@ -29,10 +30,16 @@
   <ItemGroup Condition="'$(TargetFramework.TrimEnd(`0123456789`))' == 'net'">
     <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.2" PrivateAssets="all" />
   </ItemGroup>
-	
-  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-    <Exec Command="mkdir &quot;D:\SteamLibrary\steamapps\common\Subnautica\BepInEx\plugins\$(TargetName)&quot;&#xD;&#xA;copy /Y &quot;$(TargetPath)&quot; &quot;D:\SteamLibrary\steamapps\common\Subnautica\BepInEx\plugins\$(TargetName)&quot;&#xD;&#xA;&#xD;&#xA;mkdir &quot;C:\Modding\Subnautica-Mods\Release\Anisotropic Fix\BepInEx\plugins\$(TargetName)&quot;&#xD;&#xA;copy /Y &quot;$(TargetPath)&quot; &quot;C:\Modding\Subnautica-Mods\Release\Anisotropic Fix\BepInEx\plugins\$(TargetName)&quot;" />
-  </Target>
+
+	<Import Project="GameDir.targets" />
+
+	<PropertyGroup>
+		<PluginsDir>$(GameDir)\BepInEx\plugins</PluginsDir>
+	</PropertyGroup>
+
+	<Target Name="PostBuild" AfterTargets="PostBuildEvent">
+		<Exec Command="copy /Y &quot;$(TargetPath)&quot; &quot;$(PluginsDir)\$(TargetName)&quot;" />
+	</Target>
 
   <ItemGroup>
     <Reference Include="0Harmony">
