--- a/SNRTweaks/SNRTweaks.csproj
+++ b/SNRTweaks/SNRTweaks.csproj
@@ -31,15 +31,75 @@
     <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.2" PrivateAssets="all" />
   </ItemGroup>
 
-	<Import Project="GameDir.targets" />
+    <PropertyGroup>
+        <AssetTargetsFile>Assets.targets</AssetTargetsFile>
+        <GameDirTargetsFile>GameDir.targets</GameDirTargetsFile>
+        <GameDirTargetsFullPath>$(ProjectDir)$(GameDirTargetsFile)</GameDirTargetsFullPath>
+    </PropertyGroup>
 
-	<PropertyGroup>
-		<PluginsDir>$(GameDir)\BepInEx\plugins</PluginsDir>
-	</PropertyGroup>
+    <!-- Ensure the user (you!) has actually set everything up properly. -->
+    <Target Name="EnsureGameDirectoryDefined" BeforeTargets="PrepareForBuild" Condition="!Exists('$(GameDirTargetsFullPath)')">
+      <PropertyGroup>
+        <GameDirError>No game directory was defined in a $(GameDirTargetsFile) file. Skipping copy to game directory.
+          If you want to enable this feature, create this file in the same folder as the $(MSBuildProjectFile) and add a 'GameDirectory' MSBuild property to it to proceed. There is an example file in $(MSBuildThisFileDirectory) you can copy and adjust.</GameDirError>
+      </PropertyGroup>
+      <Message Importance="high" Text="$(GameDirError)"/>
+    </Target>
 
-	<Target Name="PostBuild" AfterTargets="PostBuildEvent">
-		<Exec Command="copy /Y &quot;$(TargetPath)&quot; &quot;$(PluginsDir)\$(TargetName)&quot;" />
-	</Target>
+    <!-- Import extra information from project-specific files. -->
+    <Import Project="$(ProjectDir)$(AssetTargetsFile)" Condition="Exists('$(ProjectDir)$(AssetTargetsFile)')"/>
+    <!-- Import the location of the game directory. -->
+    <Import Project="$(GameDirTargetsFullPath)" Condition="Exists('$(GameDirTargetsFullPath)')"/>
+    <PropertyGroup>
+      <!-- The mod directory to install our mod to. -->
+      <ModDirectory>$(GameDir)\BepInEx\plugins\$(AssemblyName)</ModDirectory>
+      <!-- Where to create the temporary directory for creating the release zip files. -->
+      <TempZipDir>$(OutputPath)ZipMeUp</TempZipDir>
+      <!-- The internal structure of the zip file. -->
+      <ZipStructure>plugins\$(AssemblyName)</ZipStructure>
+    </PropertyGroup>
+
+  <!-- Copy newly built files to the game directory. -->
+  <Target Name="CopyToGameFolder" AfterTargets="Build" Condition="Exists('$(GameDir)')">
+    <Message Importance="high" Text="No assets to be copied were defined in $(AssetTargetsFile). Proceeding without them." Condition="'@(Assets)' == ''"/>
+    <Message Importance="high" Text="Copying files to game directory." />
+    <Copy SourceFiles="$(TargetPath)" DestinationFolder="$(ModDirectory)" />
+    <Copy SourceFiles="@(Assets)" DestinationFolder="$(ModDirectory)\%(Assets.RelativeDir)"/>
+  </Target>
+  
+
+  <!-- Find the current version of the assembly. -->
+  <Target Name="GetAssemblyVersion" AfterTargets="Build" Condition="$(Configuration.Contains('Release'))">
+    <GetAssemblyIdentity AssemblyFiles="$(TargetPath)">
+      <Output TaskParameter="Assemblies" ItemName="AssemblyIdentity" />
+    </GetAssemblyIdentity>
+    <PropertyGroup>
+      <AssemblyVersion>%(AssemblyIdentity.Version)</AssemblyVersion>
+    </PropertyGroup>
+    <Message Importance="high" Text="Assembly Version: $(AssemblyVersion)" />
+  </Target>
+
+  <!-- Automatically create the zip file, ready for distribution. -->
+  <Target Name="PrepareZip" AfterTargets="Build" Condition="$(Configuration.Contains('Release'))">
+    <Message Importance="normal" Text="Copying files to temporary directory." />
+    <Copy SourceFiles="$(TargetPath)" DestinationFolder="$(TempZipDir)\$(ZipStructure)" />
+    <Copy SourceFiles="@(Assets)" DestinationFolder="$(TempZipDir)\$(ZipStructure)\%(Assets.RelativeDir)" />
+  </Target>
+  <Target Name="CreateZip" AfterTargets="PrepareZip" Condition="$(Configuration.Contains('Release'))">
+    <Message Importance="high" Text="Zipping project for distribution." />
+    <PropertyGroup>
+      <ZipFile>$(OutputPath)$(AssemblyName)-$(AssemblyVersion).zip</ZipFile>
+    </PropertyGroup>
+    <ZipDirectory DestinationFile="$(ZipFile)" SourceDirectory="$(TempZipDir)" Overwrite="true" />
+  </Target>
+  <Target Name="Cleanup" AfterTargets="CreateZip" Condition="'$(Configuration)' == 'Release'">
+    <Message Importance="normal" Text="Cleaning up." />
+    <RemoveDir Directories="$(TempZipDir)" />
+  </Target>
+  <Target Name="CopyToZipsFolder" AfterTargets="Cleanup" Condition="$(Configuration.Contains('Release')) And '$(ReleaseZipDirectory)' != ''">
+    <Message Importance="normal" Text="Moving finished zip file to zip directory." />
+    <Copy SourceFiles="$(ZipFile)" DestinationFolder="$(ReleaseZipDirectory)" />
+  </Target>
 
   <ItemGroup>
     <Reference Include="0Harmony">
